--- a/templates/commande/new.html.twig
+++ b/templates/commande/new.html.twig
@@ -14,68 +14,28 @@
 							<a href="login.html">Click here to Log In</a>
 						</span>
 					</div>
+					
 					<form>
 						<div id="paypal-form" style="display: none;" class="billing-details">
 							<h3 class="title">Billing details</h3>
 							<div class="row">
+
+						  {% for adresse in adresses %}
+						  {% if app.user.getAdresseId() ==  adresse.ida  %}
 								<div class="col-lg-6 col-md-6">
 									<div class="form-group">
-										<label>First Name
+										<label>Gouvernorat
 											<span class="required">*</span>
 										</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6">
-									<div class="form-group">
-										<label>Last Name
-											<span class="required">*</span>
-										</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12">
-									<div class="form-group">
-										<label>Company Name</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12">
-									<div class="form-group">
-										<label>Country</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-6">
-									<div class="form-group">
-										<label>Address
-											<span class="required">*</span>
-										</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-6">
-									<div class="form-group">
-										<label>Town / City
-											<span class="required">*</span>
-										</label>
-										<input type="text" class="form-control">
+										<input type="text" class="form-control" value="{{ adresse.gouvernorat }}">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-group">
-										<label>State / County
-											<span class="required">*</span>
+										<label>Ville
+											<span class="required" >*</span>
 										</label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6">
-									<div class="form-group">
-										<label>Postcode / Zip
-											<span class="required">*</span>
-										</label>
-										<input type="text" class="form-control">
+										<input type="text" class="form-control" value="{{ adresse.ville }}">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
@@ -83,36 +43,23 @@
 										<label>Email Address
 											<span class="required">*</span>
 										</label>
-										<input type="email" class="form-control">
+										<input type="email" class="form-control" value="{{ app.user.getUsername() }}" >
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-group">
-										<label>Phone
+										<label>Rue
 											<span class="required">*</span>
 										</label>
-										<input type="text" class="form-control">
+										<input type="text" class="form-control" value="{{ adresse.rue }}">
 									</div>
 								</div>
-								<div class="col-lg-12 col-md-12">
-									<div class="form-check">
-										<input type="checkbox" class="form-check-input" id="create-an-account">
-										<label class="form-check-label" for="create-an-account">Create an account?</label>
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12">
-									<div class="form-check">
-										<input type="checkbox" class="form-check-input" id="ship-different-address">
-										<label class="form-check-label" for="ship-different-address">Ship to a different address?</label>
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12">
-									<div class="form-group">
-										<textarea name="notes" id="notes" cols="30" rows="5" placeholder="Order Notes" class="form-message"></textarea>
-									</div>
-								</div>
+								{% endif %}
+								{% endfor %}
+								
+
 							</div>
-							<a href="{{ path('app_produit_index')}} " class="default-btn">
+							<a href="{{ path('app_produit_index1')}} " class="default-btn">
 								Place to Order
 							</a>
 						</div>
@@ -148,7 +95,7 @@
 											<form></div>
 										</div>
 									</div>
-									<button type="submit" class="default-btn">Submit</button>
+									
 								</div>
 
 							
