--- a/templates/recettes/edit.html.twig
+++ b/templates/recettes/edit.html.twig
@@ -1,13 +1,28 @@
-{% extends 'base.html.twig' %}
+{% extends 'chefbase.html.twig' %}
 
 {% block title %}Edit Recettes{% endblock %}
 
 {% block body %}
-    <h1>Edit Recettes</h1>
+
+<div class="banner-bottom-area pt-100 pb-70">
+<div class="container">
+<div class="row justify-content-center">
+
+<div class="banner-bottom-card">
+
+  <h1>Edit Recettes</h1>
 
     {{ include('recettes/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_recettes_index') }}">back to list</a>
+    <a class="learn-btn" href="{{ path('indexChef') }}">back to list</a>
 
-    {{ include('recettes/_delete_form.html.twig') }}
+
+</div>
+</div>
+</div>
+</div>
+
+
+  
+    
 {% endblock %}
