--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -262,7 +262,7 @@
 					</a>
 					<ul class="submenu">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="{{ path('ClientAdmin') }}">Home</a>
 						</li>
 					</ul>
 				</li>
@@ -277,6 +277,9 @@
 						</li>
 						<li>
 							<a href="{{ path('app_admin_new') }}">Ajouter un administrateur</a>
+						</li>
+						<li>
+							<a href="{{ path('stat') }}">Statistiques</a>
 						</li>
 
 					</ul>
