--- a/templates/participant/index.html.twig
+++ b/templates/participant/index.html.twig
@@ -3,10 +3,19 @@
 {% block title %}Participant index{% endblock %}
 
 {% block body %}
-<div class="text-center">
-<img src="{{asset('assets/images/background.jpg')}}" data-aos="fade-in" class="aos-init aos-animate" alt="" width="1488" height="350">
-    <h1>Participants</h1>
-</div>
+<div class="inner-banner inner-bg12">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Participation</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+
+				</div>
+
+			</div>
+		</div>
     <div class="row">
         {% for participant in participants %}
             <div class="col-md-4 mb-4">
