--- a/templates/participant_controller_user/defis_participants.html.twig
+++ b/templates/participant_controller_user/defis_participants.html.twig
@@ -3,8 +3,21 @@
 {% block title %}Participants for Defis {{ defisname }} {% endblock %}
 
 {% block body %}
+<div class="inner-banner inner-bg11">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Défis</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+
+				</div>
+
+			</div>
+		</div>
 <div class="text-center">
-    <img src="{{ asset('assets/images/background.jpg') }}" data-aos="fade-in" class="aos-init aos-animate" alt="" width="1488" height="350">
+    
     <h1>Participants for Defis {{ defisname }} </h1>
 </div>
 
