--- a/templates/recettes/mes_fav.html.twig
+++ b/templates/recettes/mes_fav.html.twig
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="section-title text-center">
             <span>Recent Recipe</span>
-            <h2>Your favprite recipes</h2>
+            <h2>Your favorite recipes</h2>
         </div>
     </div>
     <div class="container">
