--- a/templates/article/blog_grid.html.twig
+++ b/templates/article/blog_grid.html.twig
@@ -1,9 +1,22 @@
-{% extends 'base.html.twig' %}
+{% extends app.user.role == 'Chef' ? 'chefbase.html.twig' : 'base.html.twig' %}
 
 {% block title %}Yumlink: Blog
 {% endblock %}
 
 {% block body %}
+<div class="inner-banner inner-bg7">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Blogs</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+
+				</div>
+
+			</div>
+		</div>
 	<div class="blog-widget-area pt-100 pb-70">
 		<div class="container">
 			<div class="row">
