--- a/templates/article/post_details.html.twig
+++ b/templates/article/post_details.html.twig
@@ -1,9 +1,22 @@
-{% extends 'chefbase.html.twig' %}
+{% extends app.user.role == 'Chef' ? 'chefbase.html.twig' : 'base.html.twig' %}
 
 {% block title %}Article
 {% endblock %}
 
 {% block body %}
+<div class="inner-banner inner-bg6">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Post details</h3>
+				<ul>
+					<li>
+						<a href="{{ path('app_article_blog')}}">Blog</a>
+					</li>
+					<li>New post</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="blog-details-area pt-100 pb-70">
 		<div class="container">
 			<div class="row">
