--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,7 @@
 			<div class="col-lg-3 col-md-4">
 				<div class="header-left">
 					<p>Welcome
-						{{app.user.username}}</p>
+						{{app.user.nom}}</p>
 				</div>
 			</div>
 			<div class="col-lg-9 col-md-8">
@@ -138,7 +138,7 @@
 					<ul class="navbar-nav m-auto">
 						<li class="nav-item">
 
-							<a href="{{ path('Welcome') }}" class="nav-link active">
+							<a href="{{ path('ClientHome') }}" class="nav-link active">
 								Home
 
 							</a>
@@ -240,11 +240,7 @@
 											Publications récentes
 										</a>
 									</li>
-									<li class="nav-item">
-										<a href="tags.html" class="nav-link">
-											Tags
-										</a>
-									</li>
+									
 								</ul>
 							{% endif %}
 						</li>
