--- a/templates/defis/index.html.twig
+++ b/templates/defis/index.html.twig
@@ -4,50 +4,60 @@
 
 {% block body %}
 
-<div class="text-center">
-    <img src="{{ asset('assets/images/background.jpg') }}" data-aos="fade-in" class="aos-init aos-animate" alt="" width="1488" height="350">
-    <h1>Défis</h1>
-</div>
-<form action="{{ path('app_defis_index') }}" method="get" class="form-inline mt-2 mt-md-0">
-    <div class="row align-items-center" style="margin-left: 1100px;">
-        <div class="col-auto">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="search" style="border-radius: 30px; width: 200px;">
-        </div>
-        <div class="col-auto">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color: #0e1125; color: white; border-color: #0e1125;">Search</button>
+<div class="inner-banner inner-bg11">
+    <div class="container">
+        <div class="inner-title text-center">
+            <h3>Défis</h3>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+
+            </div>
+
         </div>
     </div>
-</form>
-<div class="row align-items-center"style="margin-left: 1300px;">
+    <form action="{{ path('app_defis_index') }}" method="get" class="form-inline mt-2 mt-md-0">
+       <div class="row align-items-center" style="margin-left: 0; margin-right: 0;">
+    <div class="col">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="search" style="border-radius: 30px; width: 100%;">
+    </div>
     <div class="col-auto">
-        <a href="{{ path('app_defis_historique') }}" class="btn btn-outline-success my-2 my-sm-4" style="background-color: #0e1125; color: white; border-color: #0e1125; width: 100px;">Historique</a>
+        <button class="default-btn" type="submit" style="background-color: #0e1125; color: white; border-color: #0e1125;">
+            rechercher</button>
     </div>
 </div>
+    </form>
+    <div class="row align-items-center"style="margin-left: auto; margin-right: 20px;">
+        <div class="col-auto">
+            <a href="{{ path('app_defis_historique') }}" class="btn btn-outline-success my-2 my-sm-4" style="background-color: #72ae44; color: white; border-color: #0e1125; width: 100px;">Historique</a>
+        </div>
+    </div>
 
 
     <div class="row">
         {% for defi in defis %}
-            <div class="col-md-4 mb-4" >
-                <div class="card" >
-                    <div class="card-body text-center" >
-                        <h5 class="card-title" style="text-align: center;">{{ defi.nomD }}</h5>
-                        <img src="{{ asset(defi.photoD) }}" class="card-img-top mx-auto d-block" alt="..." style="width:300px; height: 200px;">
-                        <p class="card-text">{{ defi.disD }}</p>
-                        <p class="card-text">Créé par: {{ defi.user.nom }}</p>
-                        <p class="card-text"><small class="text-muted">Date limite: {{ defi.delai ? defi.delai|date('Y-m-d') : '' }} {{ defi.heure ? defi.heure|date('H:i:s') : '' }}</small></p>
-                        <a href="{{ path('app_defis_edit', {'idD': defi.idD}) }}" class="btn btn-secondary" style="background-color: #72ae44; color: white; border-color: #72ae44; border-radius: 30px; width: 110px;">Modifier</a>
-                        </br></br>
-                         {{ include('defis/_delete_form.html.twig' ) }}
-                        
+        <div class="col-md-4 mb-4" >
+            <div class="card" >
+                <div class="card-body text-center" >
+                    <h5 class="card-title" style="text-align: center;">{{ defi.nomD }}</h5>
+                    <img src="{{ asset(defi.photoD) }}" class="card-img-top mx-auto d-block" alt="..." style="width:300px; height: 200px;">
+                    <p class="card-text">{{ defi.disD }}</p>
+                    <p class="card-text">Créé par: {{ defi.user.nom }}</p>
+                    <p class="card-text"><small class="text-muted">Date limite: {{ defi.delai ? defi.delai|date('Y-m-d') : '' }} {{ defi.heure ? defi.heure|date('H:i:s') : '' }}</small></p>
+                    <a href="{{ path('app_defis_edit', {'idD': defi.idD}) }}" class="btn btn-secondary" style="background-color: #72ae44; color: white; border-color: #72ae44; border-radius: 30px; width: 110px;">Modifier</a>
+                    </br></br>
+                    {{ include('defis/_delete_form.html.twig' ) }}
 
-                    </div>
+
                 </div>
             </div>
+        </div>
         {% else %}
-            <p>No records found</p>
+        <p>No records found</p>
         {% endfor %}
     </div>
-<div class="text-center">
-    <a href="{{ path('app_defis_new') }}" class="btn btn-success"  style="background-color: #0e1125; color: white; border-color: #0e1125 ">Ajouter</a>
-</div>
-{% endblock %}
+    <div class="text-center">
+        <a href="{{ path('app_defis_new') }}" class="default-btn"  style="background-color: #0e1125; color: white; border-color: #0e1125 ">Ajouter</a>
+    </div>
+    {% endblock %}
