--- a/templates/defis_controller_user/historique_user.html.twig
+++ b/templates/defis_controller_user/historique_user.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Historique des défis{% endblock %}
 
 {% block body %}
-<div class="text-center">
-    <img src="{{ asset('assets/images/background.jpg') }}" data-aos="fade-in" class="aos-init aos-animate" alt="" width="1488" height="350">
-    <h1>Historique des défis expirés</h1>
-</div>
 
+
+<div class="inner-banner inner-bg11">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Historique des défis expirés</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+
+				</div>
+
+			</div>
+		</div>
 
 <div class="row">
     {% for defi in defis %}
