--- a/templates/defis_controller_user/participer.html.twig
+++ b/templates/defis_controller_user/participer.html.twig
@@ -3,6 +3,20 @@
 {% block title %}New Participant{% endblock %}
 
 {% block body %}
+<div class="inner-banner inner-bg11">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Défis</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+
+				</div>
+
+			</div>
+		</div>
+
     <h1 class="text-center mb-4">  Créer Participation</h1>
 
     {{ include('defis_controller_user/_form.html.twig') }}
